--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+:root {
+   --square-size: 6.25%;
+}
+
 * {
    box-sizing: border-box;
    margin: 0;
@@ -26,12 +30,13 @@ body {
 
 .grid-square {
    background-color: white;
-   height: 6.25%;
-   width: 6.25%;
+   height: var(--square-size);
+   width: var(--square-size);
    border: 1px black solid;
 }
 
-.reset-btn {
+.reset-btn,
+.custom-size-btn {
    background-color: white;
    border: 1px black solid;
    padding: 10px;
@@ -39,7 +44,8 @@ body {
    border-radius: 8px;
 }
 
-.reset-btn:hover {
+.reset-btn:hover,
+.custom-size-btn:hover {
    background-color: lightgray;
 }
 
